--- a/SFT_WEB.html
+++ b/SFT_WEB.html
@@ -15,7 +15,7 @@
             <h2>As bonus content, this website offers: </h2>
             <h3>-a few of the most important character analysations <br>
             -a language analysis which is roughly directed to ALL chapters</h3> <br>
-            <h2>~~This website is created and scripted by Alex Kleiner</h2> <br> <br>
+            <h2>~~This project is created by Alessandro,Alex,Emirhan,Henni and Tom</h2> <br> <br>
             <h1>Click the button below to view the summaries</h1> 
             
         </div>
